<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/foodIV"
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/food_picture"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foodImageViewUser"
        android:layout_marginTop="20dp"
        android:hint="@string/food_name"
        android:maxLines="1"
        android:padding="1dp" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foodImageViewUser"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:hint="@string/food_price"
        android:maxLines="1"
        android:padding="1dp"
        />

</RelativeLayout>